# exam

./: a.out  aff_z.c  ft_print_numbers.c  hello.c  only_z.c
16/: a.out  aff_a.c  aff_first_param.c  aff_last_param.c  ft_countdown.c  only_a.c
32/: a.out  first_word.c  ft_countdown.c  ft_putstr.c  ft_strcpy.c  ft_strlen.c  ft_swap.c  repeat_alpha.c  rev_print.c  rot_13.c  rotone.c  search_and_replace.c  test.c  ulstr.c
48/: 123.h.gch  CMakeLists.txt  a.out  alpha_mirror.c  atoi.c  do_op.c  do_op.h  ft_strcmp.c  ft_strdup.c  ft_strrev.c  inter.c  last_word.c  test.c
64/: a.out  epur_str.c  expand_str.c  ft_atoi_base.c  ft_list.h  ft_list_size.c  ft_range.c  ft_rrange.c  hidenp.c  rstr_capitalizer.c  str_capitalizer.c  test.c
80/: .test.c.swp  a.out  fpraim.c  fprime.c  ft_itoa.c  ft_list.h  ft_list_foreach.c  ft_split.c  rev_wstr.c  rostring.c  sort_int_tab.c  sort_list.c  test.c
povtor/: .123.c.swp  123.c  a.out
